deferred JS scripts

--- a/assets/theme-styles/css/admin.css
+++ b/assets/theme-styles/css/admin.css
@@ -334,8 +334,7 @@ li#menu-appearance ul > li a[href="themes.php?page=itre_options"]:hover, li#menu
 }
 .itre-support-plugins-form tr {
   display: block;
-  padding: 1.25rem;
-  border: solid 1px #eeeeee;
+  padding: 0.5rem 0;
   margin: -1px 0;
 }
 .itre-support-plugins-form button.button-primary {
@@ -343,34 +342,10 @@ li#menu-appearance ul > li a[href="themes.php?page=itre_options"]:hover, li#menu
   align-items: center;
 }
 
-.itre-support-plugins__links button,
-.itre-support-plugins__links a {
-  padding: 0.75rem 1.5rem;
-  border: 0;
-  border-radius: 0.125rem;
-  cursor: pointer;
-  text-transform: uppercase;
-  font-weight: 700;
-  text-decoration: none;
-}
-.itre-support-plugins__links button:not(:last-child),
-.itre-support-plugins__links a:not(:last-child) {
-  margin-right: 0.75rem;
-}
-.itre-support-plugins__links--demos {
-  background-color: var(--accent);
-  color: white;
-}
-.itre-support-plugins__links--demos:hover, .itre-support-plugins__links--demos:focus {
-  color: white;
-  background-color: var(--dark);
-}
-.itre-support-plugins__links--nothanks {
-  background-color: #dddddd;
-  color: #666666;
-}
-.itre-support-plugins__links--nothanks:hover, .itre-support-plugins__links--nothanks:focus {
-  background-color: #cccccc;
+.itre-support-plugins__links {
+  display: flex;
+  justify-content: flex-start;
+  column-gap: 0.75rem;
 }
 
 .loader {
@@ -404,20 +379,12 @@ li#menu-appearance ul > li a[href="themes.php?page=itre_options"]:hover, li#menu
 }
 
 .itre-notice {
-  font-family: var(--body-font);
-  font-size: 1.25rem;
   padding-bottom: 1.25rem;
-}
-.itre-notice p, .itre-notice button {
-  font-size: 1.25rem !important;
 }
 .itre-notice h2 {
   font-size: 2rem;
-  font-family: var(--title-font);
 }
 .itre-notice h3 {
-  font-size: 1.5rem;
-  font-family: var(--title-font);
   font-weight: 400;
 }
 
@@ -437,3 +404,5 @@ li#menu-appearance ul > li a[href="themes.php?page=itre_options"]:hover, li#menu
     -o-transform: rotate(-360deg);
   }
 }
+
+/*# sourceMappingURL=admin.css.map */
