--- a/assets/theme-styles/scss/sections/_navigation.scss
+++ b/assets/theme-styles/scss/sections/_navigation.scss
@@ -29,7 +29,7 @@
 						position: relative;
 						content: "\f107";
 						font-family: "FontAwesome";
-						padding-left: 10px;
+						padding-left: 0.625rem;
                         line-height: 1;
 					}
 				}
