--- a/assets/theme-styles/scss/sections/_header.scss
+++ b/assets/theme-styles/scss/sections/_header.scss
@@ -28,7 +28,7 @@
 
 #header-image {
     position: relative;
-    height: 250px;
+    height: 15.625rem;
     &:before {
         content: "";
         position: absolute;
@@ -48,12 +48,12 @@
     z-index: 2;
     color: white;
     h1 {
-        font-size: 2.4em;
-        @media (min-width: 768px) {
-            font-size: 4em;
+        font-size: 2.5rem;
+        @media (min-width: 48rem) {
+            font-size: 5rem;
         }
     }
     p {
-        font-size: 1.2em;
+        font-size: 1.25rem;
     }
 }
