--- a/assets/theme-styles/scss/sections/_property.scss
+++ b/assets/theme-styles/scss/sections/_property.scss
@@ -12,7 +12,7 @@ body.single-property {
     .itre-for-tag {
         color: white;
         line-height: 1;
-        padding: 0.6em 0.8em 0.4em;
+        padding: 0.6em 0.875rem 0.4375rem;
         text-transform: uppercase;
         font-size: 0.85em;
 
@@ -38,7 +38,7 @@ body.single-property {
     }
     
     #property-map {
-        height: 500px;
+        height: 31.25rem;
         width: 100%;
         margin-bottom: -2rem;
     }
