--- a/assets/theme-styles/scss/sections/_testimonials.scss
+++ b/assets/theme-styles/scss/sections/_testimonials.scss
@@ -6,7 +6,7 @@
         margin: auto;
     }
     .testimonials-wrapper {
-        margin-top: 2em;
+        margin-top: 2rem;
     }
     .test-author-thumb img {
         border-radius: 50%;
@@ -14,8 +14,8 @@
     }
 
     h3 {
-        font-size: 1.5em;
-        margin-top: 0.4em;
+        font-size: 1.5rem;
+        margin-top: 0.4375rem;
         margin-bottom: 0;
         color: var(--accent);
     }
@@ -25,8 +25,8 @@
     .test-text {
         color: #555555;
         margin: 0;
-        padding-left: 1.5em;
-        padding-right: 1.5em;
-        line-height: 1.5em;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        line-height: 1.5rem;
     }
 }
