preloaded header image

--- a/assets/theme-styles/css/main.css
+++ b/assets/theme-styles/css/main.css
@@ -312,6 +312,9 @@ body.archive.post-type-archive-property .itre-property-archive-wrapper, body.arc
 #masthead .site-title, #masthead .site-description {
   margin-bottom: 0;
 }
+#masthead .custom-logo {
+  max-width: 18.75rem;
+}
 body:not(.home) #masthead .site-title a {
   font-size: 2.5rem;
   line-height: 1;
