--- a/assets/theme-styles/css/main.css
+++ b/assets/theme-styles/css/main.css
@@ -1161,7 +1161,20 @@ article.type-post[class^=col-].col-md-6 h2, article.type-page[class^=col-].col-m
 article.classic {
   text-align: center;
 }
+article.classic .post-thumbnail {
+  position: relative;
+  display: block;
+  width: 100%;
+  padding-bottom: 57.5%;
+  margin-bottom: 1.5rem;
+}
 article.classic .post-thumbnail img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  object-fit: cover;
   margin: 0.75rem auto;
   border-radius: var(--border-radius);
 }
