--- a/assets/theme-styles/scss/layouts/_classic.scss
+++ b/assets/theme-styles/scss/layouts/_classic.scss
@@ -3,9 +3,23 @@
 article.classic {
     text-align: center;
     
-    .post-thumbnail img {
-        margin: 0.75rem auto;
-        border-radius: var(--border-radius);
+    .post-thumbnail {
+        position: relative;
+        display: block;
+        width: 100%;
+        padding-bottom: 57.5%;
+        margin-bottom: 1.5rem;
+
+        img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+            margin: 0.75rem auto;
+            border-radius: var(--border-radius);
+        }
     }
     .entry-content {
         margin-top: 0.5rem;
