Added Button Styling in content

--- a/assets/theme-styles/css/main.css
+++ b/assets/theme-styles/css/main.css
@@ -55,7 +55,7 @@ a {
   -ms-transition: all 150ms cubic-bezier(0.4, 0, 0.2, 1);
   -o-transition: all 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.entry-content a {
+.entry-content a:not(.wp-element-button) {
   text-decoration: underline;
 }
 
