--- a/assets/theme-styles/scss/sections/_universal.scss
+++ b/assets/theme-styles/scss/sections/_universal.scss
@@ -18,8 +18,13 @@ a {
 	color: var(--accent);
     text-decoration: none;
     @include transition(all 150ms $standard);
+    
     .entry-content & {
-        text-decoration: underline;
+
+            &:not(.wp-element-button) {
+            
+            text-decoration: underline;
+        }
     }
 }
 
