--- a/assets/theme-styles/scss/sections/_filter.scss
+++ b/assets/theme-styles/scss/sections/_filter.scss
@@ -166,8 +166,8 @@ body:not(.single-property) article.type-property {
 			}
 			.itre_features {
 				border-top: solid 1px rgba(0,0,0,0.1);
-				padding-top: 0.6em;
-				padding-bottom: 0.8em;
+				padding-top: 0.625rem;
+				padding-bottom: 0.75rem;
 				i {
 					color: var(--accent);
 				}
