--- a/assets/theme-styles/scss/layouts/_col.scss
+++ b/assets/theme-styles/scss/layouts/_col.scss
@@ -1,7 +1,21 @@
+
+.itre-blog-wrapper {
+    display: grid;
+    justify-content: space-between;
+    row-gap: 1.5rem;
+
+    &.col2 {
+        grid-template-columns: repeat(2, 31.5%);
+    }
+
+    &.col3 {
+        grid-template-columns: repeat(3, 31.5%);
+    }
+}
+
 article.type-post, article.type-page {
-    margin-bottom: 3rem;
     
-    &[class^="col-"] {
+    &[class^="col"] {
         
         .listing-wrapper {
             flex-direction: column;
@@ -18,12 +32,27 @@ article.type-post, article.type-page {
         }
 
         .itre-col-wrapper {
+            position: relative;
             display: flex;
             flex-direction: column;
             box-shadow: $shadow1;
             border-radius: var(--border-radius);
             overflow: hidden;
             height: 100%;
+        }
+
+        figure {
+            position: relative;
+            margin-bottom: 0;
+            width: 100%;
+            padding-bottom: 65%;
+        }
+
+        img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
 
         .itre-content-wrapper {
@@ -60,6 +89,15 @@ article.type-post, article.type-page {
         &.col-md-6 {
             h2 {
                 font-size: 1.75rem;
+            }
+        }
+
+        &:hover {
+
+            h2 {
+                text-decoration-line: underline;
+                text-decoration-thickness: 2px;
+                text-underline-offset: 3px;
             }
         }
     }
