--- a/assets/theme-styles/css/admin.css
+++ b/assets/theme-styles/css/admin.css
@@ -244,8 +244,13 @@ table.compare {
   margin-bottom: 4rem;
 }
 table.compare th, table.compare td {
-  padding: 0.75rem 1.25rem;
   text-align: center;
+}
+table.compare th {
+  padding: 0.75rem 1.25rem;
+}
+table.compare td {
+  padding: 1.5rem 1.25rem;
 }
 table.compare tr:nth-child(even) {
   background-color: white;
