--- a/assets/theme-styles/scss/admin.scss
+++ b/assets/theme-styles/scss/admin.scss
@@ -234,8 +234,15 @@ table.compare {
     margin-bottom: 4rem;
 
     th, td {
-        padding: 0.75rem 1.25rem;
         text-align: center;
+    }
+
+    th {
+        padding: 0.75rem 1.25rem;
+    }
+
+    td {
+        padding: 1.5rem 1.25rem;
     }
 
     tr:nth-child(even) {
