--- a/assets/theme-styles/scss/block-styles.scss
+++ b/assets/theme-styles/scss/block-styles.scss
@@ -105,7 +105,7 @@
 
     li {
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         margin-bottom: 0.625rem;
 
         &:before {
@@ -114,6 +114,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            margin-top: 0.125rem;
         }
     }
 }
