--- a/assets/theme-styles/scss/sections/_footer.scss
+++ b/assets/theme-styles/scss/sections/_footer.scss
@@ -1,11 +1,27 @@
 // Footer Styling
 
 #footer-sidebar {
+    position: relative;
     background-color: var(--accent);
-    filter: brightness(85%) contrast(150%);
     padding-top: 3em;
     margin-top: 2rem;
     color: white;
+
+    &:after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: rgba(0,0,0,0.24);
+        z-index: 0;
+    }
+
+    > * {
+        position: relative;
+        z-index: 1;
+    }
 
     a {
         color: white;
@@ -22,10 +38,26 @@
 }
 
 #colophon {
+    position: relative;
     background-color: var(--accent);
-    filter: brightness(85%) contrast(150%);
     color: white;
     text-align: center;
+
+    &:after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: rgba(0,0,0,0.24);
+        z-index: 0;
+    }
+
+    > * {
+        position: relative;
+        z-index: 1;
+    }
     a {
         color: white;
         text-decoration: underline;
