--- a/assets/theme-styles/scss/sections/_single.scss
+++ b/assets/theme-styles/scss/sections/_single.scss
@@ -39,6 +39,11 @@ body.single {
                 width: auto;
             }
         }
+
+        .itre-col-content {
+            height: 100%;
+            margin: 0.5rem 1rem 1rem;
+        }
     }
     #author_box {
         border: solid 1px #eeeeee;
