--- a/assets/theme-styles/scss/sections/_header.scss
+++ b/assets/theme-styles/scss/sections/_header.scss
@@ -36,6 +36,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 18.75rem;
     
     &:before {
         content: "";
