--- a/assets/theme-styles/scss/admin.scss
+++ b/assets/theme-styles/scss/admin.scss
@@ -113,12 +113,14 @@ button.def-btn {
     input:not([type="checkbox"]):not([type="radio"]), textarea {
 		width: 100%;
     }
+
     .row {
 		display: flex;
 		flex-wrap: wrap;
         & > * {
             box-sizing: border-box;
-            display: inline-block;
+            padding-left: 0.9375rem;
+            padding-left: 0.9375rem;
         }
     }
     .full-width {
@@ -134,6 +136,19 @@ button.def-btn {
         width: 50%;
         @media (min-width: 768px) {
             width: 25%;
+        }
+    }
+
+    .address {
+        display: grid;
+        gap: 1rem;
+
+        @media (min-width: 48rem) {
+            grid-template-columns: 1fr 1fr;
+        }
+
+        select {
+            width: 100%;
         }
     }
 }
