--- a/assets/theme-styles/scss/layouts/_col.scss
+++ b/assets/theme-styles/scss/layouts/_col.scss
@@ -1,5 +1,5 @@
 
-.itre-blog-wrapper {
+.itre-blog-wrapper, .itre-archive-wrapper {
     display: grid;
     justify-content: space-between;
     gap: 1.75rem 1.5rem;
