--- a/assets/theme-styles/css/main.css
+++ b/assets/theme-styles/css/main.css
@@ -226,6 +226,8 @@ textarea {
 #content {
   position: relative;
   z-index: 1;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 body:not(.page-template-template-property-listings) #content {
   padding-top: 2em;
@@ -697,30 +699,55 @@ body.single .post-navigation {
 body.single .post-navigation .nav-subtitle {
   color: #999999;
 }
-body.single #itre_related_posts_wrapper h3 {
+body.single .itre_related_posts_wrapper h3 {
   margin-top: 0.625rem;
   font-size: 1.5rem;
 }
-body.single #itre_related_posts_wrapper h3 a {
+body.single .itre_related_posts_wrapper h3 a {
   color: var(--body-text);
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
-body.single #itre_related_posts_wrapper .entry-meta > * {
+body.single .itre_related_posts_wrapper .entry-meta > * {
   display: inline-block;
   width: auto;
 }
-body.single #itre_related_posts_wrapper .itre-col-content {
+body.single .itre_related_posts_wrapper .itre-col-content {
   height: 100%;
   margin: 0.5rem 1rem 1rem;
 }
+body.single .itre_related_posts_wrapper .itre-related-posts {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem 1.25rem;
+  justify-content: space-between;
+}
+@media (min-width: 48rem) {
+  body.single .itre_related_posts_wrapper .itre-related-posts {
+    flex-direction: row;
+  }
+  body.single .itre_related_posts_wrapper .itre-related-posts > * {
+    width: 33.33%;
+  }
+}
 body.single #author_box {
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
   border: solid 1px #eeeeee;
   padding: 1rem;
   margin-bottom: 1.5rem;
   border-radius: 1rem;
+}
+@media (min-width: 48rem) {
+  body.single #author_box {
+    flex-direction: row;
+  }
+  body.single #author_box .author_info {
+    flex-basis: 90%;
+  }
 }
 body.single #author_box .author_bio {
   line-height: 1.25rem;
@@ -728,6 +755,7 @@ body.single #author_box .author_bio {
 body.single #author_box img {
   display: inline-block;
   border-radius: 50%;
+  max-width: 6rem;
 }
 
 /**
@@ -1158,17 +1186,21 @@ body.single-property #property-map {
 
 .itre-blog-wrapper, .itre-archive-wrapper {
   display: grid;
+  grid-template-columns: minmax(0, 1fr);
   justify-content: space-between;
   gap: 1.75rem 1.5rem;
 }
-.itre-blog-wrapper.col2, .itre-archive-wrapper.col2 {
-  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
-}
-.itre-blog-wrapper.col3, .itre-archive-wrapper.col3 {
-  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+@media (min-width: 48rem) {
+  .itre-blog-wrapper.col2, .itre-archive-wrapper.col2 {
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+  }
+  .itre-blog-wrapper.col3, .itre-archive-wrapper.col3 {
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+  }
 }
 
 article.type-post[class^=col] .listing-wrapper, article.type-page[class^=col] .listing-wrapper {
+  width: auto;
   flex-direction: column;
   background-color: transparent;
   margin-bottom: 1.5rem;
